[tool.poetry]
name = "otuserver"
version = "0.1.0"
description = "research project"
authors = ["6ejibiu <akimovpnz@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
